# diffpatch

./: Cargo.toml  README.md  test.sh
src/: changes.rs  config.rs  count_lines.rs  diff_patch.rs  main.rs  vec_map.rs
test/left/: a
test/right/: a
