[package]
name = "diffpatch"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"] }
walkdir = "2.5"
diffy = "0.4"
nu-ansi-term = "0.50"
termion = "4.0"
libc = "0.2"

[patch.crates-io]
diffy = { path = "/home/jakob/dev/rust/contrib/diffy" }

[lints.clippy]
bool_comparison = "allow"